Fix vertical alignment of listing images

--- a/ListingApp/ListingApp.WebApp/wwwroot/css/theme/style.css
+++ b/ListingApp/ListingApp.WebApp/wwwroot/css/theme/style.css
@@ -7735,3 +7735,7 @@ div.region span:last-child {
 .property-box {
 	height: 510px;
 }
+
+.property-thumbnail {
+	height: 399px !important;
+}
